Fixed robot position on mobile.

--- a/src/resources/less/main.less
+++ b/src/resources/less/main.less
@@ -579,7 +579,7 @@ header[role=banner] {
             width: 70%;
 
             left: 35px;
-            bottom: 205px;
+            top: 175px;
             width: 50%;
 
             @media (min-width: @screen-sm-min) {
